--- a/components/10/component.html
+++ b/components/10/component.html
@@ -11,11 +11,11 @@
     <footer>
         <!-- Will add images of social media with CSS -->
         <ul>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="twitter.com"></a></li>
+            <li><a href="facebook.com"></a></li>
+            <li><a href="rdio.com"></a></li>
+            <li><a href="dribbble.com"></a></li>
+            <li><a href="instagram.com"></a></li>
         </ul>
     </footer>
 
