--- a/components/3/component.html
+++ b/components/3/component.html
@@ -10,14 +10,13 @@
 	<!-- Component -->
    
     <!-- Social media images will be added using CSS -->
-    <section id="container">
+    <section>
         <article>
             <img src="RyanVanni.jpg" width="100%" height="100%" alt="Picture of Ryan Vanni">        
-            <section class="personInfo">
+            <section>
                 <h3>Ryan Vanni</h3>
                 <h4>CEO &#47; Founder</h4>
-                <hr>
-                <ul class="socialMediaLinks">
+                <ul>
                     <li><a href="#" title="twitter"></a></li>
                     <li><a href="#" title="instagram"></a></li>
                     <li><a href="#" title="linkedin"></a></li>
@@ -27,11 +26,10 @@
 
         <article>
             <img src="RobertReinhard.jpg" width="100%" height="100%" alt="Picture of Robert Reinhard">
-            <section class="personInfo">
+            <section>
                 <h3>Robert Reinhard</h3>
                 <h4>CTO</h4>
-                <hr>
-                <ul class="socialMediaLinks">
+                <ul>
                     <li><a href="#" title="facebook"></a></li>
                     <li><a href="#" title="twitter"></a></li>
                     <li><a href="#" title="linkedin"></a></li>
@@ -42,11 +40,10 @@
 
         <article>
             <img src="JeffToll.jpg" width="100%" height="100%" alt="Picture of Jeff Toll">
-            <section class="personInfo">
+            <section>
                 <h3>Jeff Toll</h3>
                 <h4>Creative Director</h4>
-                <hr>
-                <ul class="socialMediaLinks">
+                <ul>
                     <li><a href="#" title="twitter"></a></li>
                     <li><a href="#" title="linkedin"></a></li>
                 </ul>
