--- a/components/6/component.css
+++ b/components/6/component.css
@@ -53,6 +53,11 @@ a {
     color: #111;
 }
 
+p {
+    margin-top: 4px;
+    font-style: italic;
+}
+
 p a {
     color: #0e6ad3;
 }
@@ -61,7 +66,7 @@ article h3 {
     font-family: serif;
     font-size: 24px;
     font-weight: 500;
-    margin: 10px 0 -10px 0;
+    margin: 10px 0 0 0;
 }
 
 blockquote {
