--- a/components/10/component.css
+++ b/components/10/component.css
@@ -31,44 +31,43 @@ ul a {
     height: 88px;
     width: 92px;
 }
-
-li:nth-child(1) a {
+a[href="twitter.com"] {
     background-image: url(social.png);
     background-position: left top;
 }
 
-li:nth-child(1):hover a {
+a[href="twitter.com"]:hover {
     background-position: left bottom;
 }
 
-li:nth-child(2) a {
+a[href="facebook.com"] {
     background-image: url(social.png);
     background-position: 25% top;
 }
 
-li:nth-child(2):hover a {
+a[href="facebook.com"]:hover {
     background-position: 25% bottom;
 }
 
-li:nth-child(3) a {
+a[href="rdio.com"] {
     background-image: url(social.png);
     background-position: 50% top;
 }
 
-li:nth-child(3):hover a {
+a[href="rdio.com"]:hover {
     background-position: 50% bottom;
 }
 
-li:nth-child(4) a {
+a[href="dribbble.com"] {
     background-image: url(social.png);
     background-position: 75% top;
 }
 
-li:nth-child(4):hover a {
+a[href="dribbble.com"]:hover {
     background-position: 75% bottom;
 }
 
-li:nth-child(5) a {
+a[href="instagram.com"] {
     background-image: url(social.png);
     background-position: right top;
 }
@@ -77,7 +76,7 @@ li:nth-child(5) {
     margin-right: 0;
 }
 
-li:nth-child(5):hover a {
+a[href="instagram.com"]:hover {
     background-position: right bottom;
 }
 
