--- a/components/7/component.css
+++ b/components/7/component.css
@@ -46,7 +46,7 @@ img {
 #password input:nth-child(2) {
     margin-top: 10px;
     display: inline-block;
-    width: 70%;
+    width: 70.5%;
     padding: 7px;
     border: 2px solid #ccc;
     border-radius: 2px;
@@ -63,8 +63,10 @@ img {
     border-radius: 2px;
     padding: 6px 5% 6px 6%;
     line-height: 10px;
-    margin-left: -6px;
+    margin-left: 0px;
     background-color: #e0e0e0;
+    position: relative;
+    right: 6px;
 }
 
 #password label input {
