--- a/components/9/component.css
+++ b/components/9/component.css
@@ -56,7 +56,7 @@ section:nth-child(2) img {
 }
 
 section:nth-child(2) h4 {
-    margin-bottom: -10px;
+    margin-bottom: 0px;
 }
 
 section:nth-child(2) h4 a {
@@ -67,6 +67,7 @@ section:nth-child(2) h4 a {
 
 section:nth-child(2) p {
     color: #999;
+    margin-top: 5px;
 }
 
 section:nth-child(2) p a {
@@ -95,7 +96,8 @@ section:nth-child(3) p {
 section:nth-child(3) img {
     padding-top: 20px;
     width: 104%;
-    margin-left: -9px;
+    position: relative;
+    right: 9px;
 }
 
 section:nth-child(4) {
